fixing webpage overflow

--- a/index.css
+++ b/index.css
@@ -1,7 +1,8 @@
-body {
+html, body {
     overflow-x: hidden;
     padding:0;
     margin:0;
+    width:auto;
 }
 *{
     font-family: calibri;
@@ -184,6 +185,7 @@ body {
     width:4rem;
     margin-top:-0.5rem;
     margin-left: -0.7rem;
+    margin-bottom: 1rem;
 }
 
 .home-contents {
